# shaderloom

crates/shaderloom/: Cargo.toml
crates/shaderloom/src/: gpu_exec.rs  lib.rs  luaexec.rs  minify.rs
crates/shaderloom/src/lua/analysis/: naga.lua
crates/shaderloom/src/lua/preprocess/: chunker.lua  preprocessor.lua
crates/shaderloom/src/lua/targets/: raw.lua
crates/shaderloom/src/lua/targets/rust/: wgpu.lua
crates/shaderloom/src/lua/tests/: shader_test.lua
crates/shaderloom/tests/: integration_test.rs
examples/wgpu_bundle/: triangle.wgsl
